Updated hero breakpoint to prevent overlapping text

--- a/src/_sass/header.scss
+++ b/src/_sass/header.scss
@@ -598,7 +598,7 @@ body #hero.hero-homepage .modal-button {
   }
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1200px) {
+@media screen and (min-width: 1024px) and (max-width: 1400px) {
   body #hero.hero-homepage .hero-image {
     right: -140px;
     transform: scale(0.7);
